fix: 🎨 various, fixes squished single feed

--- a/src/atoms/button/index.module.scss
+++ b/src/atoms/button/index.module.scss
@@ -4,7 +4,6 @@
 .container {
   @include resetButton();
   font-family: var(--text-font);
-
   word-break: normal;
 
   &.fit {
@@ -31,6 +30,7 @@
 .primary {
   color: var(--text-color);
   transition: color #{$theme-duration} ease-out;
+  font-weight: 700;
 
   &.selected {
     // fake bold to avoid shift... 96% support, no Opera or IE
