--- a/src/components/media-types/video/index.module.scss
+++ b/src/components/media-types/video/index.module.scss
@@ -1,16 +1,16 @@
 @import '@styles/layout.scss';
 
 .container {
-  width: 100%;
-  height: 60vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .video {
-  position: relative;
-  width: 100%;
-  height: auto;
-  outline: 0px;
+  // outline: 0px;
+
+  video {
+    height: 100%;
+    width: 100%;
+  }
 }
